--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -112,6 +112,8 @@
       {% endwith %}
 
       <form method="POST">
+        <input type="text" id="name" name="name" class="form-control" placeholder="Full name" />
+
         <input type="text" id="username" name="username" class="form-control" placeholder="Username" required />
 
         <input type="password" id="password" name="password" class="form-control" placeholder="Password" required />
