--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -6,19 +6,19 @@
   <!-- Tabs Navigation -->
   <ul class="nav nav-tabs mb-3" id="adminTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="user-tips-tab" data-bs-toggle="tab" data-bs-target="#user-tips" type="button" role="tab" aria-controls="user-tips" aria-selected="true">
+      <a class="nav-link active" id="user-tips-tab" data-bs-toggle="tab" href="#user-tips" role="tab" aria-controls="user-tips" aria-selected="true">
         User Tips
-      </button>
+      </a>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#register" type="button" role="tab" aria-controls="register" aria-selected="false">
+      <a class="nav-link" id="register-tab" data-bs-toggle="tab" href="#register" role="tab" aria-controls="register" aria-selected="false">
         Register User
-      </button>
+      </a>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="change-username-tab" data-bs-toggle="tab" data-bs-target="#change-username" type="button" role="tab" aria-controls="change-username" aria-selected="false">
+      <a class="nav-link" id="change-username-tab" data-bs-toggle="tab" href="#change-username" role="tab" aria-controls="change-username" aria-selected="false">
         Change Username
-      </button>
+      </a>
     </li>
   </ul>
 
@@ -106,8 +106,6 @@
   </div>
 </div>
 
-<!-- Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-q2my4o5I5w6ZD+1RM6JZ4gMZb97E8X0GulD6hBS4vtd4K6FnNsZtI0jP0VZB4sQD" crossorigin="anonymous"></script>
 {% endblock %}
 
 
