--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,7 +13,7 @@
     />
     <style>
       body {
-        background: url("{{ url_for('static', filename='backgrounds/conversion.jpg')}}") no-repeat center center fixed;
+        background: url("{{ url_for('static', filename='backgrounds/background_image_1.jpg')}}") no-repeat center center fixed;
         background-size: cover;
         background-position: center;
         color: #fff;
