--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,7 +13,7 @@
     />
     <style>
       body {
-        background: url("{{ url_for('static', filename='backgrounds/background_image_1.jpg')}}") no-repeat center center fixed;
+        background: url("{{ url_for('static', filename='backgrounds/fight.jpg')}}") no-repeat center center fixed;
         background-size: cover;
         background-position: center;
         color: #fff;
@@ -313,7 +313,7 @@
         </div>
         {% endif %}
         <h1 class="display-5 text-white fw-bold text-center hero-title">
-          Welcome to Tuross Tipping Comp!
+          Welcome to the Tuross Tipping Comp 2026!
         </h1>
 
         {% if current_user.is_authenticated %}
@@ -362,6 +362,7 @@
             >Register</a
           > #}
         </div>
+        <p class="text-center text-white">"Bitches in red"</p>
         {% endif %}
       </div>
 
