--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -362,7 +362,7 @@
             >Register</a
           > #}
         </div>
-        <p class="text-center text-white">"Bitches in red"</p>
+        <p class="text-center text-white">"Bitches!"</p>
         {% endif %}
       </div>
 
