--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -353,7 +353,7 @@
             >Logout</a
           >
         </div>
-        <div class="text-center text-white mt-2 hero-title">
+        <div class="text-center text-white mt-2 hero-title fs-4">
           Round {{ round_number }}
         </div>
 
