--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -99,7 +99,8 @@
 
       .fixture-time {
         margin-top: 0.25rem;
-        font-size: 0.65rem;
+        font-size: 0.72rem;
+        font-weight: 600;
         color: #fff;
         text-align: center;
         line-height: 1.1;
@@ -281,7 +282,7 @@
         }
 
         .fixture-time {
-          font-size: 0.6rem;
+          font-size: 0.7rem;
         }
 
         .tip-logo {
