--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -161,9 +161,9 @@
       }
 
       .tip-selected {
-        border: 2px solid #dc3545;
+        outline: 2px solid #dc3545;
+        outline-offset: 2px;
         border-radius: 50%;
-        padding: 2px;
       }
 
       .fixture-vs {
