--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -186,8 +186,8 @@
       }
 
       .chat-avatar {
-        width: 30px;
-        height: 30px;
+        width: 38px;
+        height: 38px;
         border-radius: 50%;
         vertical-align: middle;
         margin-right: 8px;
@@ -481,7 +481,7 @@
           {% for msg in chat_messages %}
             <div class="chat-message">
               <strong>{{ msg.user.username }}</strong>
-              [{{ msg.timestamp.strftime('%H:%M') }}]:
+              [{{ msg.display_time or msg.timestamp.strftime('%H:%M') }}]:
               {{ msg.message }}
             </div>
           {% endfor %}
